policy-center-new page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ab6397; }
+  background: #c4110d; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #741f64; }
+  background: #d53105; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #5814f3; }
+  background: #b5090a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d1e2c3; }
+  background: #22d983; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #3e95e7; }
+  background: #a7c7ae; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #151b28; }
+  background: #239137; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d9be14; }
+  background: #6b1e55; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f934a1; }
+  background: #a00f2c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b6ee30; }
+  background: #a8d439; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e2fd3d; }
+  background: #375fb1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #fdfe2e; }
+  background: #ac8a17; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #12cbb0; }
+  background: #2b0a9e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7e382f; }
+  background: #425f21; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8bcdd5; }
+  background: #85d6ed; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #385189; }
+  background: #a7c27c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f4f6a0; }
+  background: #82922a; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #6d9484; }
+  background: #bc1646; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #eff2d2; }
+  background: #1ccc04; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #cd4fca; }
+  background: #fd0887; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #703019; }
+  background: #d95dc1; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #354648; }
+  background: #692498; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #0eea24; }
+  background: #c9dea2; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #57de98; }
+  background: #939626; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #28b8ef; }
+  background: #979dd6; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #250be5; }
+  background: #3ef040; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #72295d; }
+  background: #e090cb; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #fa3d83; }
+  background: #4cbd49; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #be73c6; }
+  background: #103926; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #74f1d5; }
+  background: #c8b82f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #21d7f2; }
+  background: #9346b6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d78745; }
+  background: #48fd47; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #2ac5a9; }
+  background: #09d92c; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #ec9afc; }
+  background: #af01e9; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0a2ef7; }
+  background: #929f11; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #232556; }
+  background: #7f9f12; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #6638ee; }
+  background: #4ab47f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d27670; }
+  background: #c58161; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #0d79ab; }
+  background: #8bc1d1; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #aff3ec; }
+  background: #0843bf; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e9257e; }
+  background: #26655f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9a1f14; }
+  background: #d827b2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #5a3015; }
+  background: #0d496e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d28f8d; }
+  background: #cb0691; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #1ac5e8; }
+  background: #e3143d; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #ed4511; }
+  background: #6212e4; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #efb342; }
+  background: #a87a08; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #6cd569; }
+  background: #438c56; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #62410f; }
+  background: #d7d4e7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b5ad7a; }
+  background: #18eeda; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ab7895; }
+  background: #d7f715; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e45606; }
+  background: #567941; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #1450b0; }
+  background: #762737; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #3cf6b0; }
+  background: #5e4bfd; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8e5f33; }
+  background: #545921; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e1ad2c; }
+  background: #ccc364; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #51b916; }
+  background: #a433f3; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #8684b1; }
+  background: #3863df; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #97b1b5; }
+  background: #9446c1; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #b268e2; }
+  background: #16b77b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #3e9130; }
+  background: #2a6f9f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #4299bf; }
+  background: #a103c9; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #11128a; }
+  background: #a64d11; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #cc5e88; }
+  background: #79d4f4; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e8f882; }
+  background: #7f65d9; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #1c15b8; }
+  background: #fb6286; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #d762f8; }
+  background: #c6c00a; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #ba440e; }
+  background: #c074af; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #bd8122; }
+  background: #756219; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #669687; }
+  background: #802c60; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #6de27f; }
+  background: #6bbd0c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #ea33ab; }
+  background: #1a3c57; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #190e34; }
+  background: #6720e8; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d235d1; }
+  background: #35bf2d; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d61438; }
+  background: #22d9e8; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #fc0712; }
+  background: #b539d1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b0b4d4; }
+  background: #66787c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #038ffb; }
+  background: #1209c1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #864058; }
+  background: #97f190; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #847468; }
+  background: #2bfdee; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #5b12c5; }
+  background: #fc1f8b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b3b65f; }
+  background: #98b289; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #a2ffb1; }
+  background: #84b059; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3ca2fa; }
+  background: #a710a2; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #297193; }
+  background: #c55f26; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #7744fc; }
+  background: #3feb1f; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #bf520b; }
+  background: #29e39f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #97f4d8; }
+  background: #7d7ced; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #fa2297; }
+  background: #f30950; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f8f214; }
+  background: #e2e38b; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #273987; }
+  background: #9fe44e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8c9cf6; }
+  background: #5f207e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #506bbc; }
+  background: #f09e3c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ef7630; }
+  background: #bc4345; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2d528a; }
+  background: #de8dbc; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f32154; }
+  background: #046420; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #aa2f9a; }
+  background: #9d83f0; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #98b8f3; }
+  background: #77aaeb; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d11e97; }
+  background: #227fb0; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b03b11; }
+  background: #458344; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #7ebffa; }
+  background: #1e43bc; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12960,15 +12960,11 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-logo {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-name {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -14492,10 +14488,7 @@ table .parent-row,
   padding: 3px 8px;
   margin-bottom: 5px; }
 
-.columns-order-div
-.dropdwon-contents-bottom
-.dropdown-connectors-list
-li:hover {
+.columns-order-div .dropdwon-contents-bottom .dropdown-connectors-list li:hover {
   background: #f6f6f6 !important;
   padding: 3px 8px;
   margin-bottom: 5px; }
@@ -14590,6 +14583,56 @@ textarea,
 select,
 option {
   font-family: "proxima-regular"; }
+
+.poclicy-center-main-warpper {
+  padding-top: 35px; }
+  .poclicy-center-main-warpper h2 {
+    font-size: 18px;
+    margin-top: 15px; }
+  .poclicy-center-main-warpper label {
+    font-size: 14px; }
+  .poclicy-center-main-warpper .custom-select {
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
+    background-color: rgba(0, 0, 0, 0);
+    background-color: #fff;
+    font-family: "proxima-regular" !important; }
+  .poclicy-center-main-warpper .gray-border-bottom {
+    display: flex;
+    width: 100%;
+    border-bottom: 0.5px solid #9a9a9a;
+    margin: 0px 15px 10px;
+    padding-bottom: 20px;
+    align-items: center; }
+    .poclicy-center-main-warpper .gray-border-bottom .form-group {
+      width: 100%;
+      padding: 0px 15px;
+      margin-bottom: 0px; }
+  .poclicy-center-main-warpper .gray-border-bottom-actions {
+    width: 100%;
+    border-bottom: 0.5px solid #9a9a9a;
+    margin: 0px 15px 10px;
+    padding-bottom: 20px; }
+    .poclicy-center-main-warpper .gray-border-bottom-actions .form-group {
+      width: 100%;
+      padding: 0px 15px;
+      margin-bottom: 0px; }
+    .poclicy-center-main-warpper .gray-border-bottom-actions .actions-field-wrapper {
+      display: flex;
+      align-items: center;
+      margin-bottom: 15px;
+      width: 100%; }
+      .poclicy-center-main-warpper .gray-border-bottom-actions .actions-field-wrapper .min-filed-width {
+        min-width: 400px; }
+  .poclicy-center-main-warpper .icons-circle-group {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
+    .poclicy-center-main-warpper .icons-circle-group a {
+      margin-right: 5px; }
+      .poclicy-center-main-warpper .icons-circle-group a:last-child {
+        margin-right: 0px; }
+      .poclicy-center-main-warpper .icons-circle-group a img {
+        width: 25px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -14908,7 +14951,24 @@ option {
         flex-direction: column; }
         .field-section-wrapper .form-group .hrs-select-group .custom-select {
           width: 100%;
-          margin: 5px 0px; } }
+          margin: 5px 0px; }
+
+  .poclicy-center-main-warpper h2 {
+    margin-top: 20px; }
+  .poclicy-center-main-warpper .gray-border-bottom {
+    flex-direction: column; }
+    .poclicy-center-main-warpper .gray-border-bottom .form-group {
+      padding: 0px 0px 10px; }
+      .poclicy-center-main-warpper .gray-border-bottom .form-group label {
+        margin-bottom: 0rem; }
+  .poclicy-center-main-warpper .actions-field-wrapper {
+    flex-direction: column; }
+  .poclicy-center-main-warpper .gray-border-bottom-actions .form-group {
+    padding: 0px 0px 8px; }
+    .poclicy-center-main-warpper .gray-border-bottom-actions .form-group .custom-select {
+      padding-bottom: 6px; }
+  .poclicy-center-main-warpper .gray-border-bottom-actions .actions-field-wrapper .min-filed-width {
+    min-width: 100%; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
